add paging by key to block and transaction
